# VI_Nav

./: README.md
vi_navigation/: package.xml  setup.cfg  setup.py
vi_navigation/launch/: shuttle_bus_navigation.launch.py  shuttle_bus_navigation_cooperative.launch.py
vi_navigation/vi_navigation/: shuttle_bus_navigation_cooperative.py
vi_navigation_interface/: CMakeLists.txt  package.xml
vi_navigation_interface/msg/: PlannedActions.msg  PlannedPath.msg
