<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vi_navigation</name>
  <version>0.0.0</version>
  <description>This package implements different probabilistic navigation algorithms for non-holonomic uni-cycle robots using variational inference.</description>
  <maintainer email="DamgaardMR@gmail.com">Malte R. Damgaard</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>torch</exec_depend>
    <exec_depend>pyro</exec_depend>
    <exec_depend>time</exec_depend>
    <exec_depend>vi_navigation_interface</exec_depend>
  </export>
</package>
